--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body,
 input {
   font-family: "Poppins", sans-serif;
 }
-
+::-webkit-scrollbar {
+    display: none;
+}
 .container {
   position: relative;
   width: 100%;
