--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body,
 input {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 ::-webkit-scrollbar {
     display: none;
