--- a/style.css
+++ b/style.css
@@ -8,15 +8,13 @@
 
 body,
 input {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-::-webkit-scrollbar {
-    display: none;
-}
+
 .container {
   position: relative;
   width: 100%;
-  background-color: #fff;
+  background-color: rgb(255, 136, 0);
   min-height: 100vh;
   overflow: hidden;
 }
@@ -136,7 +134,7 @@ form.sign-in-form {
 
 .btn {
   width: 150px;
-  background-color: #ffb310;
+  background-color: #000000;
   border: none;
   outline: none;
   height: 49px;
@@ -150,7 +148,7 @@ form.sign-in-form {
 }
 
 .btn:hover {
-  background-color: #ffb310;
+  background-color: rgb(255, 136, 0);
 }
 .panels-container {
   position: absolute;
@@ -170,7 +168,7 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #ffb310 0%, #04c4fe 100%);
+  background-image: linear-gradient(-45deg, #000000 0%, #31383a 100%);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
@@ -271,65 +269,6 @@ form.sign-in-form {
 .container.sign-up-mode .right-panel {
   pointer-events: all;
 }
-.footer{
-  background:#333;
-}
-
-.footer .box-container{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.footer .box-container .box{
-  margin:1.5rem;
-  text-align: center;
-  flex:1 1 25rem;
-}
-
-.footer .box-container .box h3{
-  font-size: 2.0rem;
-  color:#fff;
-  padding:1rem 0;
-}
-
-.footer .box-container .box p{
-  font-size: 1.3rem;
-  color:#eee;
-  padding:.7rem 0;
-}
-
-.footer .box-container .box p i{
-  padding-right: .5rem;
-  color:#f39c12;
-}
-
-.footer .box-container .box a{
-  font-size: 1.2rem;
-  display: block;
-  padding:.5rem 0;
-  color:#eee;
-}
-
-.footer .box-container .box a:hover{
-  text-decoration: underline;
-}
-
-.footer .credit{
-  padding:2rem 1rem;
-  font-size: 1.5rem;
-  color:#fff;
-  background:#111;
-  text-align: center;
-  font-weight: normal;
-  padding-bottom: 9rem;
-}
-
-.footer .credit a{
-  color:#f39c12
-}
-
-
 
 @media (max-width: 870px) {
   .container {
