--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ input {
 .container {
   position: relative;
   width: 100%;
-  background-color: rgb(255, 136, 0);
+  background-color: #6AA219;
   min-height: 100vh;
   overflow: hidden;
 }
